# MM-Whistle

./: .gitignore  Anchor.toml  Cargo.toml  README.md  debug-landing.js  ecosystem.config.cjs  idl.json  lib.rs  mm.whistle.ninja.conf  package-lock.json  package.json  server.js
programs/mm_wallet_v2/: Cargo.toml
programs/mm_wallet_v2/src/: lib.rs
src/: constants.js
src/contract/: index.js
src/fees/: claim.js
src/mm/: fund-manager.js  market-maker.js  persistent-bot-manager.js  token-market-maker.js  volume-bot-v2.js
src/mm/strategies/: grid-bot.js  index.js  price-reactive.js  pump-hunter.js  spread-mm.js  trend-follower.js  volume-bot.js
src/price/: index.js  tracker.js
src/token/: create.js
src/trading/: bonding-curve.js  index.js  pumpswap.js
src/utils/: pda.js  token-discovery.js
test/: README.md  constants.ts  example-usage.ts  mm-wallet-sdk.ts  mm_wallet_v2.json
web/: index.html  landing.html  manifest.json
